se omite 0 de graficos

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -34,7 +34,7 @@
 {% bootstrap_messages %}{% tailwind_css %}
 
 </head>
-<body class="bg-white" style="font-family: Roboto, sans-serif;">
+<body class="bg-white" style="font-family: Roboto, sans-serif!important;">
 <!-- Huincha UFRO-VRIP -->
 <div class="flex w-full z-40 h-20" style="background-color: #005fab;">
     <img class="flex" src="https://vrip.ufro.cl/wp-content/uploads/2023/08/Barra-Inst.png"> 
