--- a/theme/templates/lineas_accion_4.html
+++ b/theme/templates/lineas_accion_4.html
@@ -29,7 +29,7 @@
         <div class="flex">
             <div id="grafico-barras" class="h-96" style="width: 800px; height: 600px; margin: 0 auto;"></div>
         </div>
-        <p style="text-align: center" class="text-xs font-normal text-zinc-950 lg:text-xl dark:text-white">Fuente: Elaboración propia, a partir de la base de datos Dirección Académica de Postgrado 2023 de la Universidad de La Frontera</p>
+        <p class="text-xl text-center font-normal" style:"color: #4d4d4d"><strong>Fuente:</strong> Elaboración propia, a partir de la base de datos Dirección Académica de Postgrado 2023 de la Universidad de La Frontera</p>
     </div>
     <br>
     <hr style="border-top: 1px solid #000;">
@@ -62,7 +62,7 @@
                 <div id="chart-visitante" style="width: 500px; height: 500px;"></div>
             </div>
         </div>
-        <p class="text-xs text-center font-normal text-zinc-950 lg:text-xl dark:text-white">Fuente: Elaboración propia, a partir de la base de datos Dirección Académica de Postgrado 2023 de la Universidad de La Frontera.</p> 
+        <p class="text-xl text-center font-normal" style:"color: #4d4d4d"><strong>Fuente:</strong> Elaboración propia, a partir de la base de datos Dirección Académica de Postgrado 2023 de la Universidad de La Frontera.</p> 
     </div>
     <br>
     <br>
@@ -116,13 +116,6 @@
         },
         yAxis: {
             type: 'value',
-            name: '%',
-              nameLocation: 'middle',
-              nameGap: 35,
-              nameTextStyle: {
-                fontSize: 18,
-                align: 'left'  // Tamaño de la fuente del título del eje Y
-            }
         },
         series: [
             {
