--- a/theme/templates/nav_lineas.html
+++ b/theme/templates/nav_lineas.html
@@ -1,11 +1,11 @@
 {% load static %}
 <!--Navbar Lineas Acción-->
-<nav class="bg-base-400" uk-navbar style="font-size: 24px!important;">
+<nav class="bg-base-400" uk-navbar style="font-size: 18px!important;">
     <div class="uk-navbar-center">
         <a class="uk-navbar-toggle uk-hidden@m" href="#offcanvas2" uk-toggle>
             <span class="uk-margin-small-right" uk-icon="icon: thumbnails"></span> <span class="uk-margin-small-left">Líneas de Acción</span>
         </a>
-        <ul class="uk-navbar-nav uk-visible@m font-semibold" style="color: #005fab">
+        <ul class="uk-navbar-nav uk-visible@m font-semibold" style="color: #105ba8">
             <li class="uk-navbar-divider" style="border-right: 2px solid; margin-top: 20px; margin-bottom: 20px; color: #e6e6e6"></li>
             <li> 
                 <a class="uk-link-reset" href="{% url 'lineas_accion_1' %}" style="text-transform: none;">Acciones con Perspectiva de Género</a>
