cambios en graficos linea 4

--- a/theme/templates/lineas_accion.html
+++ b/theme/templates/lineas_accion.html
@@ -3,14 +3,14 @@
 {% load static %}
 {% include 'banner_lineas.html' %}
 {% include 'navbar.html' %}  
-<div class="container-lg dark:bg-indigo-950 dark:text-white">  
+<div class="container-lg">  
   <br>    
   <br>
   <br>
   <br>
   <hr style="border-top: 1px solid; width: 50%;">
   <br>
-  <p class="mb-4 text-3xl lg:text-4xl font-bold" style="color: #005fab;">Líneas <br>de Acción</p>
+  <p class="mb-4 text-3xl font-light" style="color: #005fab;">Líneas <br>de Acción</p>
   <br>
   <hr style="border-top: 1px solid; width: 50%;">
   <br>
