--- a/theme/templates/lineas_accion_1.html
+++ b/theme/templates/lineas_accion_1.html
@@ -3,23 +3,22 @@
 {% include 'banner_lineas.html' %}
 {% include 'navbar.html' %}
 
-<div class="container-lg text-2xl lg:text-3xl">
+<div class="container-lg">
     <br>
     <br>
     <hr style="border-top: 1px solid; width: 50%;">
     <br>
-    <p class="mb-4 text-3xl md:text-5xl lg:text-6xl font-bold" style="color: #005fab;">Línea <br>de Acción 1</p>
+    <p class="mb-4 text-3xl font-light" style="color: #005fab;">Línea <br>de Acción 1</p>
     <br>
     <hr style="border-top: 1px solid; width: 50%;">
     <br>
     <br>
     <p class="animate-fade-right text-lg font-normal text-zinc-950 min-[320px]:text-sm lg:text-xl w-9/12"><strong>Acciones con perspectiva de género</strong><br>
     <br>
-        Los indicadores correspondientes a este ítem, reflejan acciones específicas con enfoque de género 
-        en I+D+i+e tales como, la presentación de información empírica desglosada con variables de género, 
-        conclusiones referentes a la utilidad de los resultados por género, escritura con lenguaje sensible 
-        al género, estrategia de comunicación que evite estereotipos y actividades formativas y de capacitación 
-        con perspectiva de género.<br>   
+    Las Acciones con Perspectiva de Género refieren a la presentación de información empírica desglosada con 
+    variables de género, conclusiones referentes a la utilidad de los resultados por género, escritura con 
+    lenguaje sensible al género, estrategia de comunicación evitando estereotipos y actividades formativas y 
+    de capacitación con perspectiva de género.<br>   
 
         <br>Próximamente!
     </p>
