--- a/theme/templates/lineas_accion_2.html
+++ b/theme/templates/lineas_accion_2.html
@@ -4,12 +4,12 @@
 {% include 'navbar.html' %}
   {% comment %} <div class="container-fluid" style="background-color: #dfdfdf;"> {% endcomment %}
   {% comment %} <div class="container" style="width: 80%; background-color: #ffffff; margin: 0 auto;">  {% endcomment %}
-    <div class="container-lg text-2xl lg:text-3xl" style="font-family: 'Roboto', sans-serif;">
+    <div class="container-lg" style="font-family: 'Roboto', sans-serif;">
       <br>
       <br>
       <hr style="border-top: 1px solid; width: 50%;">
       <br>
-      <p class="mb-4 text-3xl md:text-5xl lg:text-6xl font-bold" style="color: #005fab;">Línea<br>de Acción 2</p>
+      <p class="mb-4 text-3xl font-light" style="color: #005fab;">Línea<br>de Acción 2</p>
       <br>
       <hr style="border-top: 1px solid; width: 50%;">
       <br>
@@ -17,10 +17,9 @@
       <p class="animate-fade-right text-lg font-bold text-zinc-950 lg:text-xl dark:text-white">Liderazgo Femenino I+D+i+e<br></p>
       <p class="animate-fade-right text-lg font-normal text-zinc-950 lg:text-xl min-[320px]:text-sm w-9/12">
         <br>
-        Los reportes estadísticos correspondientes a este ítem, guardan relación con el 
-        liderazgo femenino en proyectos de I+D+i+e, puestos de trabajo, número de contratos 
-        de I+D, y el número de artículos de carácter académico en donde las mujeres
-        aparezcan como autoras principales.
+        El Liderazgo Femenino refiere a las publicaciones de carácter académico, proyectos, 
+        emprendimientos de base científica tecnológica, activos de propiedad intelectual, 
+        entre otros, que son encabezados por mujeres en el área de I+D+i+e.
       </p>
       <br>
       <hr style="border-top: 1px solid #000"> 
@@ -158,6 +157,7 @@
                   },
                   label: {
                     show: true,
+                    fontSize: 14,
                     position: 'inside',
                     formatter: '{c}%',  // Formato para mostrar el valor
                   }
@@ -212,6 +212,7 @@
                   },
                   label: {
                     show: false,
+                    fontSize: 14,
                     position: 'inside',
                     formatter: '{c}%',  // Formato para mostrar el valor
                 }
@@ -288,6 +289,7 @@
                       },
                       label: {
                         show: true,
+                        fontSize: 14,
                         position: 'inside',
                         formatter: '{c}%',  // Formato para mostrar el valor
                       }
@@ -302,6 +304,7 @@
                       },
                       label: {
                         show: true,
+                        fontSize: 14,
                         position: 'inside',
                         formatter: '{c}%',  // Formato para mostrar el valor
                       }
