--- a/theme/templates/footer.html
+++ b/theme/templates/footer.html
@@ -1,8 +1,8 @@
 {% load static %}
-<footer class="dark:bg-indigo-950 dark:text-white shadow" style="background-color: #e6e6e6;">
+<footer class="shadow" style="background-color: #e6e6e6;">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8 sm:py-5">
         <div class="flex flex-col items-center">
-            <ul class="flex flex-wrap justify-center items-center mb-6 text-sm gap-x-6 font-semibold text-zinc-950 dark:text-white" style="text-decoration: none;">
+            <ul class="flex flex-wrap justify-center items-center text-sm gap-x-6 font-semibold text-zinc-950" style="text-decoration: none;">
                 <li class="flex justify-center px-5">
                     <a href="https://anid.cl/ufro"><img class="h-20 w-20" src="{% static 'img/anid.jpg' %}"></a>
                 </li>
@@ -14,22 +14,22 @@
                 </li>
             </ul>
         </div>
-        <hr class="my-6 border-gray-200 dark:text-white sm:mx-auto lg:my-8" />
-        <span class="block text-sm text-center text-zinc-950 dark:text-white sm:text-center">© Observatorio Género y Ciencia 2024, Proyecto InES Género UFRO<br>Todos los derechos reservados</span>
+        <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
+        <span class="block text-sm text-center text-zinc-950 sm:text-center">© Observatorio Género y Ciencia 2024, Proyecto InES Género UFRO<br>Todos los derechos reservados</span>
         <div class="flex mt-4 sm:justify-center sm:mt-0">
-              <a href="https://www.linkedin.com/in/generoencienciaufro/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+              <a href="https://www.linkedin.com/in/generoencienciaufro/" class="text-gray-500 hover:text-gray-900">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16" viewBox="0 0 40 40">
                     <path fill="#8bb7f0" d="M2.5 2.5H37.5V37.5H2.5z"></path><path fill="#4e7ab5" d="M37,3v34H3V3H37 M38,2H2v36h36V2L38,2z"></path><path fill="#fff" d="M8 16.077L13.538 16.077 13.538 27.085 13.538 32 8 32zM10.769 14.462L10.769 14.462C9.108 14.462 8 13.285 8 11.831s1.108-2.562 2.769-2.562 2.7 1.108 2.769 2.562C13.538 13.285 12.5 14.462 10.769 14.462zM32.027 32h-5.468c0 0 0-8.27 0-8.885s-.068-2.734-2.392-2.734c-2.05 0-2.392 1.982-2.392 2.734s0 8.885 0 8.885h-5.468V16.281h5.468v2.119c0 0 1.094-2.119 4.306-2.119 3.281 0 5.946 2.255 5.946 6.834V32z"></path>
                     </svg>
                   <span class="sr-only">Linkedin</span>
               </a>
-              <a href="https://www.instagram.com/generoenciencia.ufro/" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+              <a href="https://www.instagram.com/generoenciencia.ufro/" class="text-gray-500 hover:text-gray-900 ms-5">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16" viewBox="0 0 40 40">
                     <path fill="#8585cc" d="M30.5,38.5c4.418,0,8-3.582,8-8v-21c0-4.418-3.582-8-8-8h-21c-4.418,0-8,3.582-8,8v21 c0,4.418,3.582,8,8,8H30.5z"></path><path fill="#8d8dd8" d="M3.4,4.331C2.217,5.726,1.5,7.528,1.5,9.5v21c0,4.418,3.582,8,8,8h21c4.418,0,8-3.582,8-8v-21 c0-0.503-0.052-0.992-0.141-1.469C32.135,4.22,24.832,2,17,2C12.229,2,7.657,2.832,3.4,4.331z"></path><path fill="#bd82f4" d="M1.505,9.404C1.504,9.437,1.5,9.468,1.5,9.5v21c0,4.418,3.582,8,8,8h21c4.418,0,8-3.582,8-8V12.897 C32.439,8.56,25.021,6,17,6C11.465,6,6.22,7.226,1.505,9.404z"></path><path fill="#ed73f4" d="M1.5,13.88V30.5c0,4.418,3.582,8,8,8h21c4.418,0,8-3.582,8-8V17.981C32.724,13.013,25.217,10,17,10 C11.394,10,6.124,11.414,1.5,13.88z"></path><path fill="#f97dcd" d="M17,14c-5.705,0-11.014,1.664-15.5,4.509V30.5c0,4.418,3.582,8,8,8h21c4.418,0,8-3.582,8-8v-6.935 C33.194,17.698,25.534,14,17,14z"></path><path fill="#fc9c95" d="M17,18c-5.861,0-11.237,2.033-15.5,5.411V30.5c0,4.418,3.582,8,8,8h21c4.418,0,8-3.582,8-8v-0.238 C34.143,22.925,26.152,18,17,18z"></path><path fill="#ffac99" d="M17,22c-6.145,0-11.66,2.651-15.5,6.859V30.5c0,4.418,3.582,8,8,8h21c2.465,0,4.668-1.117,6.136-2.87 C33.648,27.674,25.999,22,17,22z"></path><path fill="#ffc49c" d="M30.5,38.5c0.957,0,1.87-0.177,2.721-0.485C31.087,31.065,24.649,26,17,26 c-6.186,0-11.592,3.309-14.566,8.248C3.778,36.777,6.437,38.5,9.5,38.5H30.5z"></path><path fill="#ffde8d" d="M17,30c-5.137,0-9.573,2.984-11.684,7.309C6.535,38.06,7.964,38.5,9.5,38.5h19.683 C27.35,33.542,22.595,30,17,30z"></path><path fill="#fff69f" d="M17,34c-3.319,0-6.193,1.813-7.753,4.487C9.332,38.49,9.415,38.5,9.5,38.5h15.26 C23.203,35.818,20.324,34,17,34z"></path><path fill="#8b75a1" d="M31,2c3.86,0,7,3.14,7,7v22c0,3.86-3.14,7-7,7H9c-3.86,0-7-3.14-7-7V9c0-3.86,3.14-7,7-7H31 M31,1H9 C4.582,1,1,4.582,1,9v22c0,4.418,3.582,8,8,8h22c4.418,0,8-3.582,8-8V9C39,4.582,35.418,1,31,1L31,1z"></path><path fill="#fff" d="M27.5 11A1.5 1.5 0 1 0 27.5 14A1.5 1.5 0 1 0 27.5 11Z"></path><path fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="2" d="M20 14A6 6 0 1 0 20 26A6 6 0 1 0 20 14Z"></path><path fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="2" d="M33,14.5c0-4.142-3.358-7.5-7.5-7.5 c-2.176,0-8.824,0-11,0C10.358,7,7,10.358,7,14.5c0,2.176,0,8.824,0,11c0,4.142,3.358,7.5,7.5,7.5c2.176,0,8.824,0,11,0 c4.142,0,7.5-3.358,7.5-7.5C33,23.324,33,16.676,33,14.5z"></path>
                     </svg>
                   <span class="sr-only">Instagram</span>
               </a>
-              <a href="https://www.youtube.com/@GeneroenCienciaUFRO" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+              <a href="https://www.youtube.com/@GeneroenCienciaUFRO" class="text-gray-500 hover:text-gray-900 ms-5">
                 <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="16" height="16" viewBox="0 0 48 48">
                     <path fill="#FF3D00" d="M43.2,33.9c-0.4,2.1-2.1,3.7-4.2,4c-3.3,0.5-8.8,1.1-15,1.1c-6.1,0-11.6-0.6-15-1.1c-2.1-0.3-3.8-1.9-4.2-4C4.4,31.6,4,28.2,4,24c0-4.2,0.4-7.6,0.8-9.9c0.4-2.1,2.1-3.7,4.2-4C12.3,9.6,17.8,9,24,9c6.2,0,11.6,0.6,15,1.1c2.1,0.3,3.8,1.9,4.2,4c0.4,2.3,0.9,5.7,0.9,9.9C44,28.2,43.6,31.6,43.2,33.9z"></path><path fill="#FFF" d="M20 31L20 17 32 24z"></path>
                     </svg>
