--- a/theme/templates/lineas_accion_3.html
+++ b/theme/templates/lineas_accion_3.html
@@ -67,6 +67,10 @@
     </div>
 </div>
 <br>
+<div class="container flex">
+    <iframe width="1080" height="760" src="https://app.powerbi.com/view?r=eyJrIjoiM2RmZjc4NTgtYmZjMC00NTk3LWFlZTEtZmM4NjBiZDFlZGI5IiwidCI6ImU3M2FmMWRlLWU5ZTYtNGM0OS1iMWUxLWZjNjg3ZjM2MjY0NyIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
+</div>
+
 <script type="text/javascript">
 
     {% comment %} function formatNumber(num) {
