--- a/theme/templates/banner_lineas.html
+++ b/theme/templates/banner_lineas.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% block content %}
 <div class="relative">
-    <img src="{% static 'img/banner_lineas2.jpg' %}" class="w-full h-auto" alt="Responsive image" />
+    <img src="{% static 'img/banner_indicadores.png' %}" class="w-full h-auto" alt="Responsive image" />
 </div>
 {% endblock %}
