--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -3,28 +3,17 @@
 {% block content %}
 {% include 'banner_home.html' %}
 {% include 'navbar.html' %}
-<div class="animate-fade-right container-lg dark:bg-indigo-950 dark:text-white">
+<div class="animate-fade-right flex justify-center items-center py-20">
   <br>
   <br>
   <br>
   <br>
-  <p class="text-xl text-zinc-950 dark:text-white w-9/12">
+  <p class="text-xl text-zinc-950 w-9/12 justify-center">
     El Observatorio de Género y Ciencia de la Universidad de La Frontera tiene
     como objetivo principal aportar al desarrollo de capacidades institucionales
     a través del monitoreo de las acciones de transversalización del enfoque de
     género desde una perspectiva procedimental y normativa en el ámbito de
     I+D+i+e de base científica tecnológica en la institución.<br>
-  <br>
-  <strong>Misión</strong><br>
-    Recopilar y analizar datos institucionales de I+D+i+e con perspectiva de
-    género y enfoque interseccional dentro de la Universidad de La Frontera,
-    relevando nuevas formas de incorporar la transversalidad de género a nivel
-    institucional.<br>
-  <br>
-  <strong>Visión</strong><br>
-    Observatorio de Género y Ciencia reconocido a nivel nacional e internacional
-    como guía y referente acerca de la instauración de la perspectiva de género
-    en el ámbito de I+D+i+e.
   </p>
   <br>
   <br>
