--- a/theme/templates/navbar.html
+++ b/theme/templates/navbar.html
@@ -29,7 +29,7 @@
                     </button> {% endcomment %}
                 </div>
                 <div class="hidden w-full lg:flex lg:w-auto lg:order-1 text-zinc-950" id="mobile-menu-2">
-                    <ul class="flex flex-col py-3 gap-5 font-medium lg:flex-row lg:space-x-8 lg:mt-0 text-zinc-950 dark:text-white">
+                    <ul class="flex flex-col py-3 gap-5 font-bold text-xl lg:flex-row lg:space-x-8 lg:mt-0 text-zinc-950">
                         <li>
                             <a href="/" class="block pr-4 pl-3 border-b lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 lg:dark:hover:bg-transparent" style="text-decoration: none">Inicio</a>
                         </li>
