--- a/theme/templates/repositorio.html
+++ b/theme/templates/repositorio.html
@@ -4,10 +4,10 @@
 {% include 'banner_repositorio.html' %} 
 {% include 'navbar.html' %} 
 <!--acordeón repositorio-->
-<div class="animate-fade-right container-lg px-4">
+<div class="animate-fade-right container-lg lg:px-40">
     <div id="accordion-flush" data-accordion="collapse" data-active-classes="text-gray-900" data-inactive-classes="text-gray-500">
         <p id="accordion-flush-heading-1" class="text-3xl">
-            <button type="button" class="flex items-center justify-between w-full py-5 font-medium rtl:text-right text-gray-500 border-b border-gray-200 gap-3" data-accordion-target="#accordion-flush-body-1" aria-expanded="true" aria-controls="accordion-flush-body-1">
+            <button type="button" class="flex items-center justify-between w-full py-5 font-bold rtl:text-right border-b border-gray-200 gap-3" data-accordion-target="#accordion-flush-body-1" aria-expanded="true" aria-controls="accordion-flush-body-1">
                 <span>Reportes</span>
                 <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                     <path fill-rule="evenodd" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
@@ -24,16 +24,16 @@
                                 <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
                             </svg>
                         </span>
-                        <h3 class="flex items-center mb-1 text-2xl font-semibold text-gray-900">Reporte General 2024&nbsp; <span class="bg-blue-100 text-blue-800 text-xs font-normal inline-flex items-center me-2 px-2.5 py-0.5 rounded-full border border-blue-400">&nbsp;
+                        <h3 class="flex items-center mb-1 text-3xl font-light text-gray-900">Reporte General 2024&nbsp; <span class="bg-blue-100 text-blue-800 text-xs font-normal inline-flex items-center me-2 px-2.5 py-0.5 rounded-full border border-blue-400">&nbsp;
                             <svg class="w-2.5 h-2.5 me-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0Zm3.982 13.982a1 1 0 0 1-1.414 0l-3.274-3.274A1.012 1.012 0 0 1 9 10V6a1 1 0 0 1 2 0v3.586l2.982 2.982a1 1 0 0 1 0 1.414Z"/>
                             </svg>&nbsp;
                             reciente
                             </span>
                         </h3>
-                        <time class="block mb-2 text-lg font-normal leading-none text-gray-400">Pronto el primer reporte 2024</time>
-                        <p class="mb-4 text-xl font-normal text-gray-500">Descarga el reporte del Observatorio Genero y Ciencia!</p>
-                        <a href="#" style="text-decoration: none;" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-400 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-gray-900 dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                        <time class="block mb-2 text-base font-light leading-none">Pronto el primer reporte 2024</time>
+                        <p class="mb-4 text-xl font-normal ">Descarga el reporte del Observatorio Genero y Ciencia!</p>
+                        <a href="#" style="text-decoration: none;" class="inline-flex items-center px-4 py-2 text-xl font-normal bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-gray-900 dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                     <path d="M14.707 7.793a1 1 0 0 0-1.414 0L11 10.086V1.5a1 1 0 0 0-2 0v8.586L6.707 7.793a1 1 0 1 0-1.414 1.414l4 4a1 1 0 0 0 1.416 0l4-4a1 1 0 0 0-.002-1.414Z"/>
                     <path d="M18 12h-2.55l-2.975 2.975a3.5 3.5 0 0 1-4.95 0L4.55 12H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2Zm-3 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"/>
                 </svg>Descargar</a>
@@ -44,9 +44,9 @@
                                 <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
                             </svg>
                         </span>
-                        <h3 class="mb-1 text-2xl font-semibold text-gray-900">Historial de Reportes</h3>
-                        <time class="block mb-2 text-lg font-normal leading-none text-gray-400">2024</time>
-                        <p class="text-lg font-normal text-gray-500">Pronto a publicar</p>
+                        <h3 class="mb-1 text-3xl font-light text-gray-900">Historial de Reportes</h3>
+                        <time class="block mb-2 text-base font-light leading-none">2024</time>
+                        <p class="text-xl font-normal">Pronto a publicar</p>
                     </li>
                     <li class="ms-6">
                         <span class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white">
@@ -54,9 +54,9 @@
                                 <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
                             </svg>
                         </span>
-                        <h3 class="mb-1 text-2xl font-semibold text-gray-900">Historial de Reportes</h3>
-                        <time class="block mb-2 text-lg font-normal leading-none text-gray-400">2024</time>
-                        <p class="text-lg font-normal text-gray-500">Pronto a publicar</p>
+                        <h3 class="mb-1 text-3xl font-light text-gray-900">Historial de Reportes</h3>
+                        <time class="block mb-2 text-base font-light leading-none">2024</time>
+                        <p class="text-xl font-normal">Pronto a publicar</p>
                     </li>
                 </ol>
             </div>
@@ -74,11 +74,11 @@
                 <p class="mb-2 text-gray-500"></p>
                 {% comment %} <p class="text-xl text-gray-500 dark:text-gray-400">Pronto cargaremos documentos relevantes en materias del Observatorio de Género y Ciencia!</p> {% endcomment %}
                 <div class="flex">    
-                    <h3 class="flex mb-1 text-2xl font-semibold text-gray-900">Alianza de mujeres en la academia</h3>
+                    <h3 class="flex mb-1 text-3xl font-light text-gray-900">Alianza de mujeres en la academia</h3>
                 </div>
-                <p class="text-xl text-gray-500">Universidad de los Andes, 2024</p>
+                <p class="text-xl font-normal">Universidad de los Andes, 2024</p>
                 <br>
-                <a href="{% static 'pdf/MUJERES_EN_LA_ACADEMIA_2023-1.pdf' %}" download style="text-decoration: none;" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-400 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <a href="{% static 'pdf/MUJERES_EN_LA_ACADEMIA_2023-1.pdf' %}" download style="text-decoration: none;" class="inline-flex items-center px-4 py-2 text-xl font-normal bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                     <path d="M14.707 7.793a1 1 0 0 0-1.414 0L11 10.086V1.5a1 1 0 0 0-2 0v8.586L6.707 7.793a1 1 0 1 0-1.414 1.414l4 4a1 1 0 0 0 1.416 0l4-4a1 1 0 0 0-.002-1.414Z"/>
                     <path d="M18 12h-2.55l-2.975 2.975a3.5 3.5 0 0 1-4.95 0L4.55 12H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2Zm-3 5a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"/>
                 </svg>Descargar</a>
