actualización formulario de contacto

--- a/theme/templates/navbar.html
+++ b/theme/templates/navbar.html
@@ -65,7 +65,7 @@
                             <a href="{% url 'repositorio' %}" class="block pr-4 pl-3 border-b lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0" style="text-decoration: none;">Repositorio</a>
                         </li>
                         <li>
-                            <a href="https://generoenciencia.ufro.cl/contacto/" class="block pr-4 pl-3 border-b lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0" style="text-decoration: none;">Contacto</a>
+                            <a href="{% url 'contacto' %}" class="block pr-4 pl-3 border-b lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0" style="text-decoration: none;">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -87,7 +87,7 @@
                     <a href="{% url 'repositorio' %}">Repositorio</a>
                 </li>
                 <li>
-                    <a href="#">Contacto</a>
+                    <a href="{% url 'contacto' %}">Contacto</a>
                 </li>
             </ul>
         </div>
